--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
-    "shortid": "^2.2.16",
-    "tambola": "^3.0.3"
+    "shortid": "^2.2.16"
   }
 }
